--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>com.hadoopvietnam</groupId>
             <artifactId>hadoopvietnam-controller-framework</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
